--- a/src/app/index/index.page.html
+++ b/src/app/index/index.page.html
@@ -1,9 +1,6 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>index</ion-title>
-  </ion-toolbar>
-</ion-header>
-
 <ion-content>
-
+  <div class="h9">
+    <app-slides></app-slides>
+  </div>
+  <app-start></app-start>
 </ion-content>
