--- a/src/app/modules/input/pages/stat/stat.page.html
+++ b/src/app/modules/input/pages/stat/stat.page.html
@@ -1,8 +1,4 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>stat</ion-title>
-  </ion-toolbar>
-</ion-header>
+<app-navbar [title]="title"></app-navbar>
 
 <ion-content>
 
