Reactive form for facility

--- a/src/app/modules/input/components/scorecard-form/scorecard-form.component.html
+++ b/src/app/modules/input/components/scorecard-form/scorecard-form.component.html
@@ -236,10 +236,20 @@ auditor C">Auditor C</ion-select-option>
     </form>
   </ion-slide>
 
-  <ion-slide>
+  <!-- <ion-slide>
     <div *ngFor="let facility of facilities">
       <app-facility-form [facility]="facility"></app-facility-form>
     </div>
+  </ion-slide> -->
+
+
+  <ion-slide>
+
+    <app-facility-form></app-facility-form>
+
   </ion-slide>
+
+
+
 
 </ion-slides>
