--- a/src/global.scss
+++ b/src/global.scss
@@ -117,3 +117,9 @@ a {
 ion-searchbar {
   border-radius: 25%;
 }
+ion-card {
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.16);
+  border-radius: 50px 25px 50px 10px;
+  margin-top: 5%;
+  margin-bottom: 10%;
+}
