--- a/src/app/modules/input/components/scorecard-form/scorecard-form.component.scss
+++ b/src/app/modules/input/components/scorecard-form/scorecard-form.component.scss
@@ -15,3 +15,23 @@
   margin-top: 2%;
   margin-bottom: 10%;
 }
+
+.margin {
+  margin: 5%;
+}
+
+.margin-medium {
+  margin: 10%;
+}
+
+.margin-large {
+  margin: 25%;
+}
+
+.margin-top {
+  margin-top: 5%;
+}
+
+.big-btn {
+  height: 60px;
+}
