finished scorecard on home component and making final ui changes to new scorecard

--- a/src/global.scss
+++ b/src/global.scss
@@ -128,3 +128,11 @@ ion-item {
   --border-width: 0;
   --inner-border-width: 0;
 }
+
+ion-card-header {
+  text-align: center;
+}
+
+.text-center {
+  text-align: center;
+}
