--- a/src/app/modules/input/components/basic-customer-details/basic-customer-details.component.scss
+++ b/src/app/modules/input/components/basic-customer-details/basic-customer-details.component.scss
@@ -1,7 +1,3 @@
-.right {
-  float: right;
-}
-
 .row-flex {
   display: flex;
   flex-direction: row;
@@ -10,4 +6,8 @@
   max-width: 80%;
   margin-right: auto;
   margin-left: auto;
+}
+
+ion-list {
+  display: inline-flex;
 }
