--- a/src/app/modules/input/components/scorecard-form/scorecard-form.component.html
+++ b/src/app/modules/input/components/scorecard-form/scorecard-form.component.html
@@ -1,25 +1,8 @@
-<ion-slides pager="true" [options]="slideOpts">
+<app-basic-customer-details></app-basic-customer-details>
 
+<ion-slides pager="true" [options]="slideOpts">
   <ion-slide>
     <form>
-      <ion-item>
-        <ion-label position="floating">Customer Name</ion-label>
-        <ion-input ngModel name="name" #name (change)=log(name) type="text"></ion-input>
-      </ion-item>
-      <ion-item>
-        <ion-list>
-          <ion-radio-group value="new">
-            <ion-item>
-              <ion-label>Existing</ion-label>
-              <ion-radio slot="start" value="false"></ion-radio>
-            </ion-item>
-            <ion-item>
-              <ion-label>New Customer</ion-label>
-              <ion-radio slot="start" value="true"></ion-radio>
-            </ion-item>
-          </ion-radio-group>
-        </ion-list>
-      </ion-item>
       <ion-item>
         <ion-label>Gender</ion-label>
         <ion-select ngModel name="gender" #gender (ionChange)=log(gender) placeholder="Select One">
