--- a/src/app/modules/input/pages/home/home.page.html
+++ b/src/app/modules/input/pages/home/home.page.html
@@ -1,5 +1,7 @@
 <app-navbar [title]="title"></app-navbar>
 
 <ion-content>
-    <app-score-card></app-score-card>
+    <div class="content row-flex">
+        <app-score-card *ngFor="let scorecard of scorecards" [scorecard]="scorecard"></app-score-card>
+    </div>
 </ion-content>
