--- a/src/app/shared/components/score-card/score-card.component.html
+++ b/src/app/shared/components/score-card/score-card.component.html
@@ -1,46 +1,46 @@
 <ion-card>
-  <ion-card-header>
-    <ion-card-subtitle>Card Subtitle</ion-card-subtitle>
-    <ion-card-title>Card Title</ion-card-title>
-  </ion-card-header>
+  <div class="margin column-flex">
+    <ion-card-header>
+      <ion-card-title color="primary">{{scorecard.name}}</ion-card-title>
+      <ion-card-subtitle>Scores</ion-card-subtitle>
+    </ion-card-header>
+    <ion-card-content>
+      <div class="row-flex">
+        <ion-item>
+          <div class="text-center">
+            <ion-text color="primary">Average FRR</ion-text>
+            <br>
+            <ion-text [color]="scorecard.frrColor">{{scorecard.avgFrr}}</ion-text>
+          </div>
+        </ion-item>
 
-  <ion-card-content>
-    Keep close to Nature's heart... and break clear away, once in awhile,
-    and climb a mountain or spend a week in the woods. Wash your spirit clean.
-  </ion-card-content>
-</ion-card>
+        <ion-item class="column-flex">
+          <div class="text-center">
+            <ion-text color="primary">ORR</ion-text>
+            <br>
+            <ion-text [color]="scorecard.orrColor">{{scorecard.orr}}</ion-text>
+          </div>
+        </ion-item>
 
-<ion-card>
-  <ion-item>
-    <ion-icon name="pin" slot="start"></ion-icon>
-    <ion-label>ion-item in a card, icon left, button right</ion-label>
-    <ion-button fill="outline" slot="end">View</ion-button>
-  </ion-item>
 
-  <ion-card-content>
-    This is content, without any paragraph or header tags,
-    within an ion-card-content element.
-  </ion-card-content>
-</ion-card>
+        <ion-item class="column-flex">
+          <div class="text-center">
+            <ion-text color="primary">Status</ion-text>
+            <br>
+            <ion-text color="medium">{{scorecard.status}}</ion-text>
+          </div>
+        </ion-item>
 
-<ion-card>
-  <ion-item href="#" class="ion-activated">
-    <ion-icon name="wifi" slot="start"></ion-icon>
-    <ion-label>Card Link Item 1 activated</ion-label>
-  </ion-item>
+      </div>
+      <div class="row-flex">
+        <ion-button color="warning" size="medium">
+          <ion-icon name="pencil-outline" style="color: #ffffff;"></ion-icon>
+        </ion-button>
+        <ion-button color="danger" size="medium">
+          <ion-icon name="trash-outline"></ion-icon>
+        </ion-button>
+      </div>
 
-  <ion-item href="#">
-    <ion-icon name="wine" slot="start"></ion-icon>
-    <ion-label>Card Link Item 2</ion-label>
-  </ion-item>
-
-  <ion-item class="ion-activated">
-    <ion-icon name="warning" slot="start"></ion-icon>
-    <ion-label>Card Button Item 1 activated</ion-label>
-  </ion-item>
-
-  <ion-item>
-    <ion-icon name="walk" slot="start"></ion-icon>
-    <ion-label>Card Button Item 2</ion-label>
-  </ion-item>
+    </ion-card-content>
+  </div>
 </ion-card>
