--- a/src/app/modules/input/components/facility-form/facility-form.component.html
+++ b/src/app/modules/input/components/facility-form/facility-form.component.html
@@ -4,7 +4,7 @@
       <span class="hover-pointer">
         <ion-icon color="danger" name="trash-outline"></ion-icon>
       </span>
-      <ion-card-title>Facility {{facilityCount}}</ion-card-title>
+      <ion-card-title color="primary">Facility {{facilityCount}}</ion-card-title>
       <span class="hover-pointer">
         <ion-icon name="remove-outline"></ion-icon>
       </span>
@@ -13,11 +13,11 @@
       <ion-list lines="none">
         <form>
           <ion-item>
-            <ion-label position="floating">Facility product</ion-label>
+            <ion-label position="floating" color="primary">Facility product</ion-label>
             <ion-input type="text"></ion-input>
           </ion-item>
           <ion-item>
-            <ion-label position="floating">Facility limit (OMR '000)</ion-label>
+            <ion-label position="floating" color="primary">Facility limit (OMR '000)</ion-label>
             <ion-input type="text"></ion-input>
           </ion-item>
           <br>
@@ -32,34 +32,34 @@
 
 
           <ion-item>
-            <ion-label position="stacked">Cash Margin</ion-label>
+            <ion-label position="stacked" color="primary">Cash Margin</ion-label>
             <ion-input type="text"></ion-input>
           </ion-item>
           <ion-item>
-            <ion-label position="stacked">Bank Guarantee one</ion-label>
+            <ion-label position="stacked" color="primary">Bank Guarantee one</ion-label>
             <p><small>Rating A3 by Moody's or A- by S&P or higher rating</small></p>
             <ion-input type="text"></ion-input>
           </ion-item>
           <ion-item>
-            <ion-label position="stacked">Bank Guarantees two</ion-label>
+            <ion-label position="stacked" color="primary">Bank Guarantees two</ion-label>
             <p><small>Rating Baa by Moody's or BBB by S&P or higher rating</small></p>
             <ion-input type="text"></ion-input>
           </ion-item>
           <ion-item>
-            <ion-label position="stacked">Shares</ion-label>
+            <ion-label position="stacked" color="primary">Shares</ion-label>
             <p><small>Well Marketable Shares</small></p>
             <ion-input type="text"></ion-input>
           </ion-item>
           <ion-item>
-            <ion-label position="stacked">1st Degree Freehold Land/Building</ion-label>
+            <ion-label position="stacked" color="primary">1st Degree Freehold Land/Building</ion-label>
             <ion-input type="text"></ion-input>
           </ion-item>
           <ion-item>
-            <ion-label position="stacked">1st Degree Leasehold Land/Building</ion-label>
+            <ion-label position="stacked" color="primary">1st Degree Leasehold Land/Building</ion-label>
             <ion-input type="text"></ion-input>
           </ion-item>
           <ion-item>
-            <ion-label position="stacked">2nd Degree Freehold Land/Building</ion-label>
+            <ion-label position="stacked" color="primary">2nd Degree Freehold Land/Building</ion-label>
             <ion-input type="text"></ion-input>
           </ion-item>
         </form>
