--- a/src/app/modules/input/pages/scorecard/scorecard.page.html
+++ b/src/app/modules/input/pages/scorecard/scorecard.page.html
@@ -1,5 +1,5 @@
 <app-navbar [title]="title"></app-navbar>
 
-<ion-content>
+<ion-content appScrollBar>
     <app-scorecard-form></app-scorecard-form>
 </ion-content>
