--- a/src/app/modules/input/components/basic-customer-details/basic-customer-details.component.html
+++ b/src/app/modules/input/components/basic-customer-details/basic-customer-details.component.html
@@ -1,18 +1,29 @@
-<ion-item>
-  <ion-label position="floating">Customer Name</ion-label>
-  <ion-input ngModel name="name" #name (change)=log(name) type="text"></ion-input>
+<ion-item class="row-flex zero-margin">
+  <ion-text color="medium"><small>All fields are compulsory</small></ion-text>
 </ion-item>
-<ion-item>
-  <ion-list>
-    <ion-radio-group value="new">
-      <ion-item>
-        <ion-label>Existing</ion-label>
-        <ion-radio slot="start" value="false"></ion-radio>
-      </ion-item>
-      <ion-item>
-        <ion-label>New Customer</ion-label>
-        <ion-radio slot="start" value="true"></ion-radio>
-      </ion-item>
-    </ion-radio-group>
-  </ion-list>
-</ion-item>
+<div class="row-flex">
+  <ion-item>
+    <ion-label position="floating" color="primary">Customer Name</ion-label>
+    <ion-input name="name" #name type="text"></ion-input>
+  </ion-item>
+  <ion-radio-group>
+    <ion-row>
+      <ion-col>
+        <ion-item>
+          <ion-radio value="false"></ion-radio>
+          <ion-label color="primary">Existing</ion-label>
+        </ion-item>
+      </ion-col>
+      <ion-col>
+        <ion-item>
+          <ion-radio value="true"></ion-radio>
+          <ion-label color="primary">New Customer</ion-label>
+        </ion-item>
+      </ion-col>
+    </ion-row>
+  </ion-radio-group>
+  <ion-item>
+    <ion-label position="floating" color="primary">Civil ID/Passport No | CIF</ion-label>
+    <ion-input name="id" #id type="text"></ion-input>
+  </ion-item>
+</div>
