--- a/src/app/modules/input/pages/home/home.page.html
+++ b/src/app/modules/input/pages/home/home.page.html
@@ -1,6 +1,6 @@
 <app-navbar [title]="title"></app-navbar>
 
-<ion-content>
+<ion-content appScrollBar>
     <div class="content row-flex">
         <app-score-card *ngFor="let scorecard of scorecards" [scorecard]="scorecard"></app-score-card>
     </div>
