--- a/src/app/modules/input/pages/scorecard/scorecard.page.scss
+++ b/src/app/modules/input/pages/scorecard/scorecard.page.scss
@@ -1,20 +1,66 @@
-::-webkit-scrollbar {
-  width: 20px;
+.column-flex {
+  flex-direction: column;
 }
 
-/* Track */
-::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 5px grey;
-  border-radius: 10px;
+.row-flex {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+  max-width: 80%;
+  margin-right: auto;
+  margin-left: auto;
+}
+.end {
+  margin-top: 2%;
+  margin-bottom: 10%;
 }
 
-/* Handle */
-::-webkit-scrollbar-thumb {
-  background: red;
-  border-radius: 10px;
+.margin {
+  margin: 5%;
 }
 
-/* Handle on hover */
-::-webkit-scrollbar-thumb:hover {
-  background: #b30000;
+.margin-medium {
+  margin: 10%;
+}
+
+.margin-large {
+  margin: 25%;
+}
+
+.margin-top {
+  margin-top: 5%;
+}
+
+.big-btn {
+  height: 60px;
+}
+
+.width-80 {
+  min-width: 80%;
+  max-width: 80%;
+}
+
+#right-arrow {
+  position: fixed;
+  bottom: 40%;
+  right: 2%;
+  z-index: 1000;
+  opacity: 0.3;
+}
+
+#right-arrow:hover {
+  opacity: 0.9;
+}
+
+#left-arrow {
+  position: fixed;
+  bottom: 40%;
+  left: 1%;
+  z-index: 1000;
+  opacity: 0.3;
+}
+
+#left-arrow:hover {
+  opacity: 0.9;
 }
