--- a/src/app/modules/user-management/user-management.page.scss
+++ b/src/app/modules/user-management/user-management.page.scss
@@ -15,3 +15,12 @@
 .margin {
   margin: 5%;
 }
+
+.column-flex {
+  flex-direction: column;
+}
+
+ion-card {
+  max-width: 80%;
+  min-width: 80%;
+}
