--- a/src/app/modules/user-management/components/user-card/user-card.component.html
+++ b/src/app/modules/user-management/components/user-card/user-card.component.html
@@ -7,9 +7,16 @@
       <div class="text-center">
         <ion-text color="primary">Roles</ion-text>
         <br>
-        <ion-select multiple="true" placeholder="Select appropriately">
-          <ion-select-option *ngFor="let role of roles">{{role}}</ion-select-option>
+        <ion-select multiple="true" placeholder="Select appropriately" [ngModel]="user.roles" name="updatedRoles"
+          #updatedRoles (ionChange)=updateRoles(updatedRoles.value)>
+          <ion-select-option *ngFor="let role of roles" [value]="role">{{role}}
+          </ion-select-option>
         </ion-select>
+        <div class="row-flex">
+          <ion-button color="danger" size="large" fill="clear" (click)="deleteUser()">
+            <ion-icon name="trash-outline"></ion-icon>
+          </ion-button>
+        </div>
       </div>
     </ion-card-content>
   </ion-col>
