added user, scorecard services and input/home now displays scorecards

--- a/src/app/modules/input/pages/home/home.page.html
+++ b/src/app/modules/input/pages/home/home.page.html
@@ -2,6 +2,6 @@
 
 <ion-content appScrollBar>
     <div class="content row-flex">
-        <app-score-card *ngFor="let scorecard of scorecards" [scorecard]="scorecard"></app-score-card>
+        <app-score-card *ngFor="let scorecard of scorecards" [scorecard]="scorecard" class="min-width"></app-score-card>
     </div>
 </ion-content>
