added user, scorecard services and input/home now displays scorecards

--- a/src/app/shared/components/score-card/score-card.component.html
+++ b/src/app/shared/components/score-card/score-card.component.html
@@ -1,4 +1,4 @@
-<ion-card>
+<ion-card class="min-height">
   <div class="margin column-flex">
     <ion-card-header>
       <ion-card-title color="primary">{{scorecard.customer.name}}</ion-card-title>
