Creating a new scorecard done and the scorecard page now takes id and the scorecard information is available but has to be populated

--- a/src/app/modules/input/components/basic-customer-details/basic-customer-details.component.html
+++ b/src/app/modules/input/components/basic-customer-details/basic-customer-details.component.html
@@ -4,9 +4,11 @@
 <div class="row-flex">
   <ion-item>
     <ion-label position="floating" color="primary">Customer Name</ion-label>
-    <ion-input name="name" #name type="text"></ion-input>
+    <ion-input name="name" #name (ionChange)="submitData(name.value, id.value, newCustomer.value)" debounce="600"
+      type="text">
+    </ion-input>
   </ion-item>
-  <ion-radio-group>
+  <ion-radio-group name="new" #newCustomer (ionChange)="submitData(name.value, id.value, newCustomer.value)">
     <ion-row>
       <ion-col>
         <ion-item>
@@ -24,6 +26,7 @@
   </ion-radio-group>
   <ion-item>
     <ion-label position="floating" color="primary">Civil ID/Passport No | CIF</ion-label>
-    <ion-input name="id" #id type="text"></ion-input>
+    <ion-input name="id" #id type="text" (ionChange)="submitData(name.value, id.value, newCustomer.value)"
+      debounce="500"></ion-input>
   </ion-item>
 </div>
