--- a/src/app/shared/components/score-card/score-card.component.html
+++ b/src/app/shared/components/score-card/score-card.component.html
@@ -40,7 +40,7 @@
         <ion-button color="warning" size="medium">
           <ion-icon name="pencil-outline" style="color: #ffffff;"></ion-icon>
         </ion-button>
-        <ion-button color="danger" size="medium">
+        <ion-button color="danger" size="medium" (click)="deleteSc()">
           <ion-icon name="trash-outline"></ion-icon>
         </ion-button>
       </div>
