--- a/src/app/modules/input/input.page.html
+++ b/src/app/modules/input/input.page.html
@@ -8,7 +8,7 @@
       <ion-icon name="home"></ion-icon>
       <ion-label>Home</ion-label>
     </ion-tab-button>
-    <ion-tab-button tab="scorecard">
+    <ion-tab-button [tab]="scorecardTab" (click)="presentModal()">
       <ion-icon name="create"></ion-icon>
       <ion-label>New Scorecard</ion-label>
     </ion-tab-button>
