--- a/src/app/modules/input/components/basic-customer-details/basic-customer-details.component.html
+++ b/src/app/modules/input/components/basic-customer-details/basic-customer-details.component.html
@@ -8,7 +8,7 @@
       (ionChange)="submitData(name.value, id.value, newCustomer.value,expiryDt.value)" debounce="600" type="text">
     </ion-input>
   </ion-item>
-  <ion-radio-group name="new" #newCustomer
+  <ion-radio-group value={{customerNew}} name="new" #newCustomer
     (ionChange)="submitData(name.value, id.value, newCustomer.value,expiryDt.value)">
     <ion-row>
       <ion-col>
@@ -33,7 +33,7 @@
   </ion-item>
   <ion-item>
     <ion-label position="floating" color="primary">Expiry Date</ion-label>
-    <ion-input [value]="expiryDt" name="expiryDt" #expiryDt type="Date"
+    <ion-input [value]="expiryDate" name="expiryDt" #expiryDt type="Date"
       (ionChange)="submitData(name.value, id.value, newCustomer.value,expiryDt.value)" debounce="500">
     </ion-input>
   </ion-item>
